[gd_scene load_steps=9 format=2]

[ext_resource path="res://modules/procedural_platform_generator/platform_map_generator.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/platforms.gd" type="Script" id=2]
[ext_resource path="res://assets/tileset/bricks.tres" type="TileSet" id=3]
[ext_resource path="res://modules/procedural_platform_generator/linear_platform_generator.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/black_cat.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/health_ui.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/main.gd" type="Script" id=7]
[ext_resource path="res://scripts/items.gd" type="Script" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 128, 72 )
current = true

[node name="PlatformGenerator" parent="." instance=ExtResource( 1 )]

[node name="PlatformSectionGenerator" parent="PlatformGenerator" instance=ExtResource( 4 )]
decision_maker_script_path = "res://scripts/decision_maker.gd"
platform_unit_width = 8
max_platform_units = 8
min_platform_units = 4
max_platform_gap_units = 3

[node name="Items" type="Node" parent="PlatformGenerator/PlatformSectionGenerator"]
script = ExtResource( 8 )
item_file_paths = [ "res://scenes/hamburger.tscn", "res://scenes/ice_cream.tscn", "res://scenes/pizza.tscn", "res://scenes/ration.tscn", "res://scenes/ration_2.tscn", "res://scenes/trash.tscn" ]

[node name="Platforms" type="TileMap" parent="PlatformGenerator/PlatformSectionGenerator"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
collision_use_kinematic = true
format = 1
script = ExtResource( 2 )
start_row = 17

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( -36, 136 )
can_jump = false
automove_to = 1
velocity = 50

[node name="Camera" type="Camera2D" parent="Player"]
position = Vector2( 0, -60 )
process_mode = 0
drag_margin_v_enabled = true
drag_margin_top = 1.0
drag_margin_bottom = 1.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="UI" instance=ExtResource( 6 )]

[node name="Score" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 14.0
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="map_clear_requested" from="PlatformGenerator" to="PlatformGenerator/PlatformSectionGenerator/Platforms" method="_on_PlatformGenerator_map_clear_requested"]
[connection signal="draw_platform_requested" from="PlatformGenerator/PlatformSectionGenerator" to="PlatformGenerator/PlatformSectionGenerator/Platforms" method="_on_PlatformSectionGenerator_draw_platform_requested"]
[connection signal="platform_generated" from="PlatformGenerator/PlatformSectionGenerator/Platforms" to="PlatformGenerator/PlatformSectionGenerator/Items" method="_on_Platforms_platform_generated"]
